Fix: logo displayed correctly on firefox

--- a/_scss/navbar.scss
+++ b/_scss/navbar.scss
@@ -4,6 +4,16 @@
   padding-top: 2rem;
   align-items: center;
 
+  &-logo {
+    height: 30px;
+    width: auto;
+
+    @media (min-width: 768px) {
+      height: 100%;
+      width: auto;
+    }
+  }
+
   &-links {
     display: flex;
     align-items: baseline;
